--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -429,12 +429,19 @@ D. nombre co-tutor
 % Abstract en castellano
 \renewcommand*\abstractname{Resumen}
 \begin{abstract}
-En este primer apartado se hace una \textbf{breve} presentación del tema que se aborda en el proyecto.
+Actualmente, vivimos en una sociedad marcada por las nuevas tecnologías, incluso se puede llegar a decir que se han convertido en algo imprescindible.
+
+Además, el mercado de las aplicaciones móviles está en constante crecimiento. Por lo que como ingenieros informáticos nos tenemos que preparar para esta nueva realidad.
+
+El presente trabajo tiene como objetivo principal desarrollar una aplicación para el sistema operativo Android. Consiste en una colección de juegos, con el fin de entretener a los usuarios y poder conseguir rendimiento económico mediante los anuncios que esta incluye. 
+
+La aplicación se ha desarrollado en Flutter. Este entorno ofrece la posibilidad de crear aplicaciones para: Android, iOS y web, de una manera ágil. Con la gran ventaja de que conlleva un ahorro de costes para los desarrolladores, ya que no necesitan saber código nativo.
+
 \end{abstract}
 
 \renewcommand*\abstractname{Descriptores}
 \begin{abstract}
-\emph{Android, Flutter, Dart, VisualStudio Code, Github, ...} 
+\emph{Android, Flutter, Dart, Visual Studio Code, Android Studio, Github, Firebase, Firestore, Play Store, Google ...} 
 \end{abstract}
 
 \clearpage
@@ -442,12 +449,12 @@ En este primer apartado se hace una \textbf{breve} presentación del tema que se
 % Abstract en inglés
 \renewcommand*\abstractname{Abstract}
 \begin{abstract}
-A \textbf{brief} presentation of the topic addressed in the project.
+	
 \end{abstract}
 
 \renewcommand*\abstractname{Keywords}
 \begin{abstract}
-\emph{Android, Flutter, Dart, VisualStudio Code, Github, ...}
+\emph{Android, Flutter, Dart, Visual Studio Code, Android Studio, Github, Firebase, Firestore, Play Store, Google ...} 
 \end{abstract}
 
 \clearpage
