--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -1,16 +1,16 @@
 \capitulo{1}{Introducción}
 
-Comentar brevemente que la idea inicial para el proyecto no era la de crear una aplicación para dispositivos móviles. Si no que se pensó en otros trabajos:
+Comentar brevemente que la idea inicial para el proyecto no era la de crear una aplicación para dispositivos móviles. Si no que se pensó en otros trabajos previos a Flutter Games:
 
 \begin{itemize}
-	\item A finales de 2019 la idea era hacer el proyecto dentro de la empresa donde me encontraba haciendo las prácticas curriculares (ITCL). El trabajo consistía en una aplicación de reconocimiento de la mosca de la fruta. Pero no prosperó.
+	\item A finales del 2019 la idea era hacer el proyecto final de grado dentro de la empresa donde me encontraba haciendo las prácticas extracurriculares (ITCL). El trabajo consistía en una aplicación de reconocimiento de la mosca de la fruta en imágenes. Pero no prosperó.
 	
 	\item La siguiente propuesta de mis tutores fue la de trabajar con la herramienta \emph{Knime} junto con \emph{Moodle}. Dedique muchas horas a este proyecto, pero era de investigación y no me motivaba, por lo que se acabó descartando esta opción.
 \end{itemize}
 
-Finalmente para no perder la convocatoria me decante por hacer una aplicación Android mediante Flutter~\cite{wiki:flutter}. El por qué de esta decisión es que la cuota de mercado para este sistema operativo es enorme~\cite{wiki:marketOS}, con un fuerte crecimiento hasta 2018, estabilizándose y actualmente es el lider del mercado como podemos ver en la siguiente imagen~\ref{fig:cuota}. 
+Finalmente, para no perder la convocatoria me decanté por hacer una aplicación Android mediante Flutter~\cite{wiki:flutter}. El por qué de esta decisión es que la cuota de mercado para este sistema operativo es enorme~\cite{wiki:marketOS}, con un fuerte crecimiento hasta 2018 cuando se estabilizó. Actualmente es el líder del mercado como podemos ver en la siguiente imagen~\ref{fig:cuota}. 
 
-También debemos de remarcar que la cuota de mercado de los sistemas operativos tradicionales no para de descender, lo que implica que los móviles han venido para quedarse, pero no para sustituir a los ordenadores. Por lo que es una apuesta de futuro aprender el desarrollo de estas aplicaciones móviles, ya que la demanda es muy grande.
+También se debe remarcar que la cuota de mercado de los sistemas operativos tradicionales no para de descender, lo que implica que los móviles han venido para quedarse, pero no para sustituir a los ordenadores. Por lo que es una apuesta de futuro aprender el desarrollo de estas aplicaciones móviles, ya que la demanda es muy grande.
 
 \begin{figure}[H]
 	\centering
@@ -18,9 +18,9 @@ También debemos de remarcar que la cuota de mercado de los sistemas operativos 
 	\caption{Cuota de mercado}\label{fig:cuota}
 \end{figure}
 
-Básicamente me de decanté por Flutter porque permite la creación de aplicaciones para dos sistemas operativos (Android e iOS) y web. Todo ello programando en un mismo lenguaje, con las ventajas que esto conlleva, además de que es de Google con el respaldo que ofrece. 
+Básicamente me de decanté por Flutter porque permite la creación de aplicaciones para dos sistemas operativos (Android e iOS) y web. Todo ello programando en un mismo lenguaje, con las ventajas que esto conlleva, además al ser de Google, ofrece un gran soporte.
 
-El contenido de la aplicación estaría basado en una librería / colección de  videojuegos. De tal manera que sería el hilo conductor con el que poder tocar gran cantidad de tecnologías y aprender en profundidad del funcionamiento de Flutter.
+El contenido de la aplicación está basado en una librería / colección de  videojuegos. De tal manera que esto sería el hilo conductor con el que poder tocar gran cantidad de tecnologías y aprender en profundidad del funcionamiento de Flutter.
 %% Terminar porque tenemos que explicar más cosas
 
 \section{Estructura de la memoria}\label{estructura-de-la-memoria}
