--- a/docs/latex/tex/2_Objetivos_del_proyecto.tex
+++ b/docs/latex/tex/2_Objetivos_del_proyecto.tex
@@ -3,15 +3,15 @@
 %% Comentario de la plantilla
 %%Este apartado explica de forma precisa y concisa cuales son los objetivos que se persiguen con la realización del proyecto. Se puede distinguir entre los objetivos marcados por los requisitos del software a construir y los objetivos de carácter técnico que plantea a la hora de llevar a la práctica el proyecto.
 
-A continuación, se detallarán los objetivos que han motivado la realización de este proyecto así como los resultados que se desean conseguir.
+A continuación, se detallan los objetivos que han motivado la realización de este proyecto así como los resultados que se desean conseguir.
 
 \section{Objetivos generales}
 \begin{itemize}
 	\item Desarrollar una aplicación para \emph{smartphone}.
-	\item Implementación y despliegue de la app en la tienda de de Google.
+	\item Implementación y despliegue de la app en la tienda de Google.
 	\item Obtener el rendimiento económico mediante publicidad.
 	\item Hacer que los usuarios pasen un buen rato.
-	\item Mostrar quien es el creador de la aplicación, con el fin de poder usar esta como herramienta o portfolio.
+	\item Mostrar quién es el creador de la aplicación, con el fin de poder usar esta como \emph{portfolio}.
 	\item Desarrollar juegos.
 \end{itemize}
 
@@ -19,11 +19,11 @@ A continuación, se detallarán los objetivos que han motivado la realización d
 \begin{itemize}
 	\item Aprender una alternativa moderna a javascript mediante Dart.
 	\item Comprender el funcionamiento de Flutter.
+	\item Entender la utilización de los \emph{Futures} en Flutter.
 	\item Control de versiones con la herramienta GitHub, mediante comandos a través de GitBash.
 	\item Generar documentación de todo el proceso en \LaTeX.
 	\item Realizar una planificación mediante \emph{Scrum} eficiente, a través de la herramienta ZenHub, integrada en GitHub.
-	\item Comenzar a usar las herramientas telemáticas para las reuniones con los tutores del trabajo final de grado. 
-	\item Comunicación de la aplicación mediante WebServices.
+	\item Usar las herramientas telemáticas para las reuniones con los tutores del trabajo final de grado. 
 	\item Conocer y aprender a usar las herramientas que proporciona el \emph{Cloud Services} de Google.
 	\item Diseñar la arquitectura de la aplicación.
 	
@@ -34,8 +34,7 @@ A continuación, se detallarán los objetivos que han motivado la realización d
 	\item Adquirir el conocimiento necesario para desarrollar aplicaciones móviles y multiplataforma. Es decir, para tres entornos: Android, iOS y web.
 	\item Aprobar el trabajo de fin de grado, ya que es un reto.
 	\item Estudiar como generar documentación en \LaTeX.
-	\item Aprender que sin esfuerzo no hay recompensa.
-	\item Comprender el funcionamiento de la comunicación entre la una aplicación y los servicios en la nube.
+	\item Comprender el funcionamiento de la comunicación entre una aplicación y los servicios en la nube.
 	\item Reforzar los conocimientos adquiridos durante la carrera.
 	\item Investigar diferentes herramientas para solventar los problemas que salgan.
 	\item Adquirir las nociones necesarias para poder llevar proyectos.
