--- a/docs/latex/tex/6_Trabajos_relacionados.tex
+++ b/docs/latex/tex/6_Trabajos_relacionados.tex
@@ -1,12 +1,14 @@
 \capitulo{6}{Trabajos relacionados}
 
-Al tratarse de una herramienta muy joven, salió en el 2018, por lo que lleva apenas dos años en el mercado. Cada vez empieza a ver más documentación al respecto, cursos y foros en los que se tratan los temas. Entiendo que esto se debe a que Google esta apostando fuerte por el lenguaje. 
+Esta herramienta es muy novedosa, Google la presentó en el 2018, por lo que lleva únicamente dos años en el mercado.
 
-No me he basado en trabajo anteriores, pero si que he buscado mucha información y me he documentado en gran cantidad de sitios,algunos de los cuales son :
+La documentación es escasa y mayoritariamente escrita en inglés. Cada vez hay más información, cursos, y foros al respecto. Entiendo que esto se debe a que Google está apostando fuerte por este lenguaje, ya que ellos son sus creadores.
+
+No me he basado en trabajos anteriores, pero si que he buscado mucha información y me he documentado al respecto. Algunos de los lugares donde he recabado la información son:
 
 
 \begin{itemize}
-	\item Flutter sdk , donde está toda la documentación oficial~\href{https://flutter.dev/}{web}~\footnote{https://flutter.dev/}.
+	\item Flutter sdk, donde está toda la documentación oficial~\href{https://flutter.dev/}{web}~\footnote{https://flutter.dev/}.
 	\item Canal oficial de  ~\href{https://www.youtube.com/watch?v=ukLBCRBlIkk&list=PLjxrf2q8roU1kMpfyJ4EY0pID2oRHtvGm}{flutter}~\footnote{https://www.youtube.com/watch?v=ukLBCRBlIkk} en youtube, donde se comenta el Widget de la semana.
 	\item Todo lo referente a~\href{https://api.dart.dev/stable/2.8.4/index.html}{dart}~\footnote{https://api.dart.dev/stable/2.8.4/index.html}.
 	\item Canal de youtube sobre ~\href{https://www.youtube.com/channel/UCP4bf6IHJJQehibu6ai__cg}{firebase}~\footnote{https://www.youtube.com/channel/UCP4bf6IHJJQehibu6aicg}.
