--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -270,10 +270,10 @@ La idea es que la aplicación se distribuya de manera gratuita a través de la c
 
 Por lo que la vía de obtener ingresos como freelance, puede ser incrementar el coste del proyecto un 15\%, con el fin de asegurar ese beneficio. Esto garantiza que ante un incremento de las horas planificadas, siga existiendo margen de beneficio. En el caso de que no lleguemos a gastar todas las horas planificadas, también supondrá un aumento de las ganancias.
 
-El nuevo coste total del proyecto sería: 6011,15 * 0,15\% = 6912,82  €, que añadiendo el I.V.A. del 0,21\%, se queda en \textbf{8364,5 €} que debería de pagar la Universidad como cliente que realiza el encargo. Esta sería la factura final.
+El nuevo coste total del proyecto sería: 6011,15 * 0,15\% = 6912,82  €, que añadiendo el I.V.A. del 0,21\%, se queda en \textbf{8364,5 €} que debería de pagar la Universidad como cliente que realiza el encargo. Esta sería la factura final de todo el proyecto.
 
 \subsubsection{Coste real del proyecto}
-Haciendo la suma de las horas destinadas en cada uno de los \emph{sprints}, vemos en la tabla\ref{table:horas}:
+Haciendo la suma de las horas destinadas en cada uno de los \emph{sprints}, vemos en la tabla~\ref{table:horas}:
 
 \begin{table}[H]
 	\begin{center}
@@ -333,7 +333,7 @@ Para el completar el proyecto han sido necesarias gran multitud de herramientas,
 		& MIT \\
 		Firebase console    & 5.5    & \begin{tabular}[c]{@{}l@{}}Herramienta de Google\\ gestión sercios.\end{tabular}                     
 		& Gratis \\
-		Play Sotre console    & --    & \begin{tabular}[c]{@{}l@{}}Backend developers\\ tienda apps\end{tabular}                     
+		Play Store console    & --    & \begin{tabular}[c]{@{}l@{}}Backend developers\\ tienda apps\end{tabular}                     
 		& \begin{tabular}[c]{@{}l@{}}Licencia \\ pagada\end{tabular}  \\
 		Admob services    & --    & \begin{tabular}[c]{@{}l@{}}Herramienta publicidad\\\end{tabular}                     
 		& Gratis \\ \bottomrule
