--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -152,7 +152,7 @@ Entre los servicios que ofrece destacan entre otros:
 	\end{figure}
 	\item \textbf{Test lab:} probar la aplicación antes de realizar el despliegue de la misma. También el lanzamiento de pruebas alfa y beta.
 	\item \textbf{Remote config:} hacer cambios internos del funcionamiento de la aplicación sin tener que recomplilar o actualizar.
-	\item \textbf{Hosting:} servidor donde podemos publicar una página web.
+	\item \textbf{Hosting:} servidor donde se puede publicar una página web.
 	\item \textbf{Análisis:} mediante las analíticas que ofrece~\ref{fig:numerousers}, sirve como herramienta de toma de decisiones. Pudiendo optimizar a que mercados dirigirse mediante una estrategia de marketing.
 	\begin{figure}[H]
 		\centering
