--- a/docs/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/docs/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -1,6 +1,6 @@
 \capitulo{4}{Técnicas y herramientas}
 
-Esta parte de la memoria tiene como objetivo presentar las técnicas metodológicas y las herramientas de desarrollo que se han utilizado para llevar a cabo el proyecto. Se comentará de manera breve, las diferentes opciones y la razón porque estás fueron descartadas.
+Esta parte de la memoria tiene como objetivo presentar las técnicas metodológicas y las herramientas de desarrollo que se han utilizado para llevar a cabo el proyecto. Se comentará de manera breve, las diferentes opciones y la razón porque la que estas fueron descartadas.
 
 %%%%SISTEMAS OPERATIVOS
 \section{Sistema Operativo}
@@ -8,22 +8,22 @@ Esta parte de la memoria tiene como objetivo presentar las técnicas metodológi
 \subsection{Opciones elegidas}
 
 \subsubsection{Microsoft}
-~\href{https://www.microsoft.com/es-es}{Microsoft} es el sistema operativo generalista por excelencia. Es de sobra conocido, con sus pros y contras. Fue elegido por comodidad, ya que es el que tengo instalado en mis ordenadores. Además el IDE usado (Visual Studio Code, pág.~\pageref{visual}) para el desarrollo, será de la misma compañía, por lo que hay mayor optimización para este sistema.
+~\href{https://www.microsoft.com/es-es}{Microsoft} es el sistema operativo generalista por excelencia. Es muy conocido, con sus pros y contras. Fue elegido por comodidad, ya que es el que tengo instalado en mis ordenadores personales. Además el IDE usado para el desarrollo (Visual Studio Code, pág.~\pageref{visual}), será de la misma compañía, por lo que hay mayor optimización para este sistema.
 
 \subsubsection{Android}
-~\href{https://www.android.com/intl/es_es/}{Android} es un sistema operativo móvil desarrollado por Google. Está basado en el kernel de Linux. Tiene casi toda la cuota de mercado de telefonía. Este se ha usado en mi \emph{smartphone} personal y en las máquinas virtuales, con el fin de probar las aplicaciones en dispositivo físicos y virtualiazdos respectivamente.
+~\href{https://www.android.com/intl/es_es/}{Android} es un sistema operativo móvil desarrollado por Google. Está basado en el kernel de Linux. Tiene casi toda la cuota de mercado de telefonía. Este se ha usado en mi \emph{smartphone} personal y en las máquinas virtuales, con el fin de probar las aplicaciones en dispositivo físicos y virtualiazdos respectivamente. Se ha elegido este debido a que mis termianales físicos contienen esta plataforma software.
 
 \subsection{Alternativas descartadas}
 
 \subsubsection{Ubuntu}
-~\href{https://ubuntu.com/}{Ubuntu} es un sistema operativo de código abierto, distribuido bajo una licencia libre. Está basado en Debian, distribución de Linux. Se desarta porque no iba a instalar otro sistema operativo en mis ordenadores personales.
-
+~\href{https://ubuntu.com/}{Ubuntu} es un sistema operativo de código abierto, distribuido bajo una licencia libre. Está basado en Debian, distribución de Linux. Se descartó porque no iba a instalar otro sistema operativo en mis ordenadores personales.
 
 \subsubsection{macOS X}
-~\href{https://www.apple.com/es/macos}{macOs} sistema operativo creado por Apple, basado en Unix. Se descarta por que se quiere trabajar con dispositivos Android. Pero en el caso de que se quiera desarrollar para iOS pág.~\pageref{ios}, es indispensable usarlo aquí, porque a la hora de compilar, tira de las librerías internas de este sistema operativo.
+~\href{https://www.apple.com/es/macos}{macOs} sistema operativo creado por Apple, basado en Unix. Se descarta por trabajar con dispositivos Android. Pero en el caso de que se necesite desarrollar para iOS pág.~\pageref{ios}, es indispensable usarlo aquí, porque a la hora de compilar, tira de las librerías internas de este sistema operativo.
+Aunque se podría virtualizar, pero es menos eficiente.
 
 \subsubsection{iOS}~\label{ios}
-~\href{https://www.apple.com/es/ios}{iOS} sistema operativo para \emph{smartphones} creado por Apple, basado en Unix. Se descarta por que se quiere trabajar con dispositivos Android. Pero en el caso de que se quiera desarrollar para iOS~\pageref{ios}, es indispensable usarlo aquí, porque a la hora de compilar tira de las librerías internas del sistema operativo.
+~\href{https://www.apple.com/es/ios}{iOS} sistema operativo para \emph{smartphones} creado por Apple, basado en Unix. Se descarta por que se quiere trabajar con dispositivos Android. Necesario trabajar con macOS X, por el mismo problema.
 
 %%CONTROL DE VERSIONES
 \section{Control de versiones}
@@ -33,12 +33,12 @@ Esta parte de la memoria tiene como objetivo presentar las técnicas metodológi
 \subsubsection{Git}
 ~\href{https://git-scm.com//}{Git} es un software de control de versiones, pensado para trabajar con gran cantidad de archivos, con el fin de llevar el registro de los cambios y coordinar a las personas que los comparten. Es gratuito y de código abierto.
 
-Me he decantado por él, porque lo usé durante las prácticas curriculares y extracurriculares de forma intensa, mediante la herramienta Git Bash, ya que mediante comando me siento más cómodo que con una interfaz. Aunque también la dispone mediante el comando \emph{gitk}.
+Me he decantado por él, porque lo usé durante las prácticas curriculares y extracurriculares de forma intensa, mediante la herramienta Git Bash. Además con el uso de comandos me siento más cómodo que con una interfaz. Si fuera necesario visualizar también la dispone mediante el comando \emph{gitk}.
 
 \subsubsection{GitHub}\label{github}
-~\href{https://github.com/}{Github} es una plataforma web, recientemente comprada por Microsoft, usada para el control de versiones con las funciones de Git. Entre las diferentes herramientas a destacar: wiki para cada uno de los proyectos, gráficos, funcionalidades de red social, gestor de proyectos, entre otras.
+~\href{https://github.com/}{Github} es una plataforma web, recientemente comprada por Microsoft, usada para el control de versiones con las funciones de Git. Entre las diferentes herramientas a destacar, se encuentran: wiki para cada uno de los proyectos, gráficos, funcionalidades de red social, gestor de proyectos, entre otras.
 
-Se escogió esta porque la hemos usado durante el grado y es de sobra conocida. Además ofrece la posibilidad de integración con la herramienta Zenhub~\pageref{zenhub}, para la gestión del proyecto, teniendo las dos cosas centralizadas en el mismo lugar, lo que facilita el proceso de desarrollo.
+Se escogió esta porque la hemos usado durante el grado y es muy conocida. Además ofrece la posibilidad de integración con la herramienta Zenhub~\pageref{zenhub}, para la gestión del proyecto, teniendo las dos cosas centralizadas en el mismo lugar, lo que facilita el proceso de desarrollo.
 
 \subsection{Alternativas descartadas}
 
