--- a/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -1,21 +1,21 @@
 \capitulo{5}{Aspectos relevantes del desarrollo del proyecto}
 
-En este apartado se recogen los aspectos más importantes o relevantes del desarrollo del proyecto. Desde las decisiones tomadas y las implicaciones que conlleva. Además de los problemas que fueron surgiendo.
+En este apartado se recogen los aspectos más importantes o relevantes del desarrollo del proyecto. Desde las decisiones tomadas hasta las implicaciones que conlleva. Además de los problemas que fueron surgiendo durante todo el proceso.
 
 \section{Comienzo del trabajo final de grado}
-La idea de mi proyecto, surge de la noche a al mañana, porque el problema fue que era el día 20  de junio y no tenía nada para entregar. Esto se debía a que inicialmente iba a hacer otro proyecto basado en \emph{Knime}.
+La idea de mi proyecto, surge de la noche a al mañana, porque era día 20 de junio y no tenía nada para entregar. Esto se debía a que inicialmente iba a hacer otro proyecto basado en \emph{Knime}.
 
-No podía dejar pasar una convocatoria más, debido a que el otro proyecto no me motivaba lo suficiente y con poca documentación al respecto. Aparte no me sentía cómodo con el tema.
+No podía dejar pasar una convocatoria más. El otro proyecto no me motivaba lo suficiente y tenía poca documentación al respecto. Aparte no me sentía cómodo con el tema.
 
-Por lo que me decidí estudiar como estaba el mercado de la programación móvil, descubriendo Flutter. Me gustó mucho, todo lo que se comentaba sobre este \emph{Framework}, eran cosas buenas, que era algo nuevo y sobretodo lo que más me decidió a cogerlo, es el respaldo que le daba Google.
+Por lo que decidí estudiar cómo estaba el mercado de la programación móvil, descubriendo Flutter. Me gustó mucho que todo lo que se comentaba sobre este \emph{Framework}, eran cosas buenas, era algo novedoso y sobretodo lo que más me decantó a cogerlo fue el respaldo que le da Google.
 
-Esto se lo comenté a mis tutores de trabajo final de grado, dándome el visto bueno, pero que tenía que trabajar mucho, para llegar a la calidad esperada. Por lo que era un reto enorme al que me enfrentaba, pero como digo, no se pueden dejar pasar las oportunidades, además que por otra parte lo que más me incentivaba, es a la hora de buscar trabajo, no decir que solo me quedaba el TFG. 
+Esto se lo comenté a mis tutores de trabajo final de grado, dándome el visto bueno, pero debía trabajar mucho para llegar a la calidad esperada. Por lo que era un reto enorme al que me enfrentaba, pero como digo, no se pueden dejar pasar las oportunidades. Por otra parte lo que más me incentivaba, era que a la hora de buscar trabajo, no podía acreditar mi titulación como ingeniero, por lo que el trabajo final de grado es el último paso que se debe de completar, antes de encontrar empleo.
 
 Ya que muchas de las empresas me decían que me esperaban a que terminase, para luego cogerme. Y yo no podía esperar, porque si no hacía el TFG, debía de trabajar para no tener que pensar en esto. Por lo que me encontraba entre la ``espada y la pared''.
 
-Por lo que me siento muy agradecido con mis tutores, por haberme dejado cambiar de proyecto, por animarme a conseguirlo, por el feedback constante y darme el soporte necesario.
+En definitiva me siento muy agradecido a mis tutores, por haberme dejado cambiar de proyecto, por animarme a conseguirlo, por el feedback constante y darme el soporte necesario.
 
-Finalmente hice un curso en ~\href{https://www.udemy.com/course/flutter-primeros-pasos/}{Udemy}, de unas 40 horas en dos días y medio, para conocer los elementos más básicos, ya que empezaba con los conocimientos que aporta la carrera nada más.
+Al final la idea fue la de realizar una aplicación móvil para Android con Flutter, para ello fue necesario realizar un curso en ~\href{https://www.udemy.com/course/flutter-primeros-pasos/}{Udemy}, de unas 40 horas en dos días y medio, para conocer los elementos más básicos de este lenguaje.
 
 \section{Flutter es asíncrono}
 Uno de los mayores retos cuando empiezas a trabajar con este \emph{framework} (ya que en el curso que hice ni se tocan prácticamente), es que se trabaja de manera asíncrona.
